# tests

./: .gitignore  .gitmodules  README  README.md  bsoup_urllib.py  db-test-1.py  db-test-2.py  error-handling.py  essai-flask.py  formatting.py  helloclass.py  helloworld.py  serialize.py  timers.py
bash/: dialog-ex1.sh  dialog-ex2.sh  dialog-ex3.sh  dialog-ex4.sh  elapsed.sh  get_stable.sh  script-args-example.sh  stderr.sh  stdout.sh  test-divide.sh  test-docker.sh  test-parallel.sh  test-read-to.sh  test-select-sd.sh  test-stdout-stderr.sh
c++/docker-cmake/sources/test-1/: CMakeLists.txt  build.sh  install-libboost-apt.sh  install-libcpr-github.sh  install-opencv-apt.sh  install-spdlog-apt.sh  install-tinyb-github.sh  main.cpp
c++/dynamic-binding/: dynamic-binding.cpp
cxx/docker-cmake/sources/test-1/: CMakeLists.txt  main.cpp
cxx/docker-cmake/sources/test-1/old-installer-scripts/: install-capnproto-apt.sh  install-cmake.sh  install-cpplinuxserial-github.sh  install-cppzmq-github.sh  install-flatbuffers-apt.sh  install-libblepp-github.sh  install-libnmea-github.sh  install-nlohmannjson-github.sh  install-poco-apt.sh  install-protobuf-apt.sh  install-qt5-requirements.sh  install-qt6-requirements.sh  install-sdbusc++-apt.sh  install-websocket++-github.sh
cxx/dynamic-binding/: dynamic-binding.pro
cxx/examples/: Makefile  addressof.cpp  any.cpp  apply.cpp  array.cpp  assert.cpp  assignable-from.cpp  async.cpp  async2.cpp  auto.cpp  begin-end.cpp  bind_front.cpp  binding1.cpp  binding2.cpp  binding3.cpp  bitset.cpp  canary.cpp  canary2.cpp  canary3.cpp  cbegin-cend.cpp  check.sh  chrono-duration.cpp  chrono-hh-mm-ss.cpp  chrono-high-resolution-clock.cpp  chrono-system-clock.cpp  chrono-ymd.cpp  cin.cpp  class.cpp  class2.cpp  class3.cpp  class4.cpp  complex.cpp  const.cpp  const2.cpp  consteval.cpp  consteval2.cpp  constexpr.cpp  constexpr2.cpp  constinit.cpp  cout-cerr.cpp  (+135 more)
python/: db-test-2.py  essai-flask.py  formatting.py  get-pythons.sh  helloworld.py  install-python-version.sh  json-server.py  json-websocket-server.py  serialize.py  test-apt-api.py
python/convert/: convert-csv.py  convert-csv.sh  convert-dt-json.py
qt/: liste-qt6-6.2.4-deps.txt  liste-qt6-6.2.4.txt
qt/qml-image/: MyImageProvider.cpp  MyImageProvider.h  Worker.cpp  Worker.h  main.cpp  main.qml  qml-image.pro
qt/qrcode-qml/: README.md  main.qml  qrcode-qml.pro
qt/qt-gui/: ConnectedControlsPanel.qml  ConnectedText.qml  LoggingBox.qml  qml.qrc
qt/sqlog4cpp/: log_message.cpp  log_message.h  logger.cpp  logger.h  main.cpp  sqlite_backend.cpp
qt/test-nlohmann-json/: README.md  main.cpp  test-nlohmann-json.pro
qt/test-qml/: Mycontrol.qml  main.qml  qml.pro  qml_fr_FR.ts
qt/test-qml-json-cpp/: backend.cpp  backend.hpp  main.qml
qt/test-qml-json-json/: CMakeLists.txt  backend.cpp  backend.hpp  main.cpp  main.qml
qt/test-qml-json-qml/: CMakeLists.txt  main.cpp  main.qml
qt/test-qml-json-xml/: CMakeLists.txt  backend.cpp  main.qml
qt/test-rapidjson/: README.md  main.cpp  test-rapidjson.pro
test-flask/: app-1.py  app-2.py  app-3.py  create_db_schema.sql  init_db.py
test-flask/templates/: base.html  edit-message.html  index-1.html  index-3.html
www/2/: index.html
www/2/js/: code.js
www/3/: index.html  p4.html  p5.html
www/4/: index.html
(+67 files in other folders)
